# job-hunter-services

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: run-cron.yml  run-tests.yml
cronjob/: Jobprocessor.py  fetch_jobs.py  locations.py
jobMatch/: app.py  calculate_skills_score.py  resume_data.json
jobMatch/tests/: conftest.py  test_app.py  test_calculate_skills_score.py
resumeUpload/: .gitignore  ResumeDataParser.py  ResumeService.py  app.py  helpers.py
resumeUpload/evals/: eval_summary.csv  run_evals.py
resumeUpload/evals/data/: resume1.expected.json  resume1.txt  resume10.expected.json  resume10.txt  resume2.expected.json  resume2.txt  resume3.expected.json  resume3.txt  resume4.expected.json  resume4.txt  resume5.expected.json  resume5.txt  resume6.expected.json  resume6.txt  resume7.expected.json  resume7.txt  resume8.expected.json  resume8.txt  resume9.expected.json  resume9.txt
resumeUpload/evals/eval_results/: eval_results_20260704_232727.csv  eval_results_20260705_003412.csv  eval_results_20260705_003451.csv  eval_results_20260705_003642.csv  eval_results_20260705_010651.csv
resumeUpload/tests/: conftest.py  test_app.py  test_helpers.py  test_resume_service.py
